fix height shift

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -599,17 +599,17 @@ main .info {
 
   @screen sm {
     font-size: 1.8rem;
-    margin-top: -0.5rem;
+    /* margin-top: -0.5rem; */
   }
 
   @screen lg {
     font-size: 2rem;
-    margin-top: -1.25rem;
+    /* margin-top: -1.25rem; */
   }
 
-  height: 135px;
+  height: 7.26rem;
 
-  padding: 1em 0;
+  padding: .5em 0;
   text-align: center;
   line-height: 1.75;
   text-shadow: 0 0 2px #fff,
